@@ -41,6 +41,8 @@ Post-v2.15.0
      * Add study function to miniflow function table which studies packet
        and automatically chooses the best miniflow implementation for that
        traffic.
+     * Add build time configure command to enable auto-validatior as default
+       miniflow implementation at build time.
    - ovs-ctl:
      * New option '--no-record-hostname' to disable hostname configuration
        in ovsdb on startup.
